--- a/todo.txt
+++ b/todo.txt
@@ -1,4 +1,4 @@
 * Change AnimatedSprite constructors to only receive 1 std::string imagepath. Instead add function addAnimation(string, vector) and let that function
-	insert to unordered_map. Add another addAnimation(string, string) for spritesheets.
+	insert to unordered_map. Add another addAnimation(string, string) for spritesheets. Implement eventAnimation
 * Add music and sounds (shoot, hit, crash, etc.)
 * 
