--- a/todo.txt
+++ b/todo.txt
@@ -1,10 +1,6 @@
 Todo:
-* Add another addAnimation(string, string) for spritesheets. 
+- Add another addAnimation(string, string) for spritesheets. 
 * Ta bort allt som har med "FlagForDeletion " att göra?
-* Bara basklassen behöver delete copy konstruktor och tilldelningsoperator!!! OBS!!!
-* Kolla upp om jag har const på alla metoder som inte påverkar något.
-* Se till at musikvolymen sätts till volume-variabeln så att det inte blir ett hopp när man ändrar volym med
-	shortcuts.
 * Lägg till ERROR-CHECKS!
 * Ordna refCounter så att Sprite-objekt bara tas bort om inga refererar till dem.
 
