Ufo can bomb. Adding som gravity functionallity

--- a/todo.txt
+++ b/todo.txt
@@ -1,6 +1,7 @@
 Todo:
 - Add another addAnimation(string, string) for spritesheets. 
-* Lägg till ERROR-CHECKS!
+* Lägg till ERROR-CHECKS! Kolla Jozefs ppt slide
+* Lägg in grejjer i GameEngine.cpp i funktioner. t ex col detection?
 
 Betygskriterier:
 A: 
